// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > renders with as correctly 1`] = `
"<div class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent">
  <div class="inline-flex items-center h-[17px] gap-1">
    <!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis underline-offset-1">Badge</span>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Badge > renders with avatar and leadingIcon correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md ps-2xs font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent" leadingicon="i-lucide-arrow-left"><span class="inline-flex items-center h-[17px] gap-1"><span class="inline-flex items-center justify-center select-none overflow-hidden rounded-full align-middle bg-base-100 dark:bg-base-900 size-xs2 text-4xs font-regular shrink-0"><img role="img" src="https://github.com/benjamincanac.png" width="10" height="10" class="h-full w-full rounded-[inherit] object-cover" style="display: none;"><span class="font-medium text-base-500 dark:text-base-600 truncate"> </span></span>
<!--v-if--></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with avatar and trailingIcon correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md ps-2xs font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><span class="inline-flex items-center justify-center select-none overflow-hidden rounded-full align-middle bg-base-100 dark:bg-base-900 size-xs2 text-4xs font-regular shrink-0"><img role="img" src="https://github.com/benjamincanac.png" width="10" height="10" class="h-full w-full rounded-[inherit] object-cover" style="display: none;"><span class="font-medium text-base-500 dark:text-base-600 truncate"> </span></span>
<!--v-if--></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with avatar correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md ps-2xs font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><span class="inline-flex items-center justify-center select-none overflow-hidden rounded-full align-middle bg-base-100 dark:bg-base-900 size-xs2 text-4xs font-regular shrink-0"><img role="img" src="https://github.com/benjamincanac.png" width="10" height="10" class="h-full w-full rounded-[inherit] object-cover" style="display: none;"><span class="font-medium text-base-500 dark:text-base-600 truncate"> </span></span>
<!--v-if--></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with b24ui correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis underline-offset-1 font-bold">Badge</span></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with class correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent rounded-full font-bold"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis underline-offset-1">Badge</span></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with default slot correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if-->Default slot</span>
<!--v-if--></span>"
`;

exports[`Badge > renders with icon correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md ps-2xs font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><i-lucide-rocket class="shrink-0 size-[15px]"></i-lucide-rocket><!--v-if--></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with label correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis underline-offset-1">Badge</span></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with leading and icon correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md ps-2xs font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent" leading="true"><span class="inline-flex items-center h-[17px] gap-1"><i-lucide-arrow-left class="shrink-0 size-[15px]"></i-lucide-arrow-left><!--v-if--></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with leading slot correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1">Leading slot<!--v-if--></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with leadingIcon correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent" leadingicon="i-lucide-arrow-left"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if--><!--v-if--></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with primary depth dark correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-3xs gap-1 ring ring-inset ring-base-500 dark:ring-base-600 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis underline-offset-1">Badge</span></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with primary depth light correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-normal text-3xs gap-1 ring ring-inset ring-base-100 dark:ring-base-150 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis underline-offset-1">Badge</span></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with primary depth normal correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis underline-offset-1">Badge</span></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with size lg correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 font-bold text-xs gap-1 rounded-lg ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[24px] gap-1"><!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis">Badge</span></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with size md correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis underline-offset-1">Badge</span></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with size sm correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-4xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[16px] gap-1"><!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis underline-offset-1">Badge</span></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with size xl correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 font-bold text-md gap-1 rounded-xl ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[31px] gap-1"><!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis">Badge</span></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with size xs correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-5xs gap-0.5 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[14px] gap-0.5"><!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis underline-offset-1">Badge</span></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with success depth dark correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-3xs gap-1 ring ring-inset ring-green-500 dark:ring-green-600 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis underline-offset-1">Badge</span></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with success depth light correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-normal text-3xs gap-1 ring ring-inset ring-green-500/17 dark:ring-green-300 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis underline-offset-1">Badge</span></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with success depth normal correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-3xs gap-1 ring ring-inset ring-green-300 dark:ring-green-330 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if--><span class="max-w-full whitespace-nowrap text-ellipsis underline-offset-1">Badge</span></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with trailing and icon correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if--><!--v-if--></span>
<!--v-if--></span>"
`;

exports[`Badge > renders with trailing slot correctly 1`] = `"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if--><!--v-if--></span>Trailing slot</span>"`;

exports[`Badge > renders with trailingIcon correctly 1`] = `
"<span class="select-none font-b24-secondary inline-flex items-center transition-all duration-200 ease-linear px-2 rounded-md font-bold text-3xs gap-1 ring ring-inset ring-base-150 dark:ring-base-200 text-base-800 dark:text-base-250 bg-transparent dark:bg-transparent"><span class="inline-flex items-center h-[17px] gap-1"><!--v-if--><!--v-if--></span>
<!--v-if--></span>"
`;
